--- a/terraform/envs/dev.tfvars.example
+++ b/terraform/envs/dev.tfvars.example
@@ -19,3 +19,10 @@ availability_zones = [
 ]
 
 flow_logs_retention_days = 30
+
+name_prefix             = "hello-birthday-dev"
+engine                 = "mysql"
+instance_class         = "db.t3.micro"
+allocated_storage      = 20
+username               = "username"
+password               = "password"
