--- a/terraform/envs/prod.tfvars.example
+++ b/terraform/envs/prod.tfvars.example
@@ -22,3 +22,11 @@ availability_zones = [
 ]
 
 flow_logs_retention_days = 365
+
+name_prefix             = "hello-birthday-prd"
+env                    = "prod"
+engine                 = "mysql"
+instance_class         = "db.m6g.large""
+allocated_storage      = 100
+username               = "username"
+password               = "password"
