feat(terraform): add RDS module with secure VPC integration (#8)
* feat(terraform): add RDS module with secure VPC integration

--- a/terraform/envs/dev.tfvars.example
+++ b/terraform/envs/dev.tfvars.example
@@ -18,4 +18,9 @@ availability_zones = [
   "us-east-1b"
 ]
 
-flow_logs_retention_days = 30
+name_prefix             = "hello-birthday-dev"
+engine                 = "mysql"
+instance_class         = "db.t3.medium"
+allocated_storage      = 20
+username               = "username"
+password               = "password"
