--- a/terraform/envs/prod.tfvars.example
+++ b/terraform/envs/prod.tfvars.example
@@ -21,4 +21,10 @@ availability_zones = [
   "us-east-1c"
 ]
 
-flow_logs_retention_days = 365
+name_prefix             = "hello-birthday-prd"
+env                    = "prod"
+engine                 = "mysql"
+instance_class         = "db.m6g.large""
+allocated_storage      = 100
+username               = "username"
+password               = "password"
