--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -29,6 +29,11 @@ jobs:
         with:
           terraform_version: "1.11.0"
 
+      - name: Install MySQL client
+        run: |
+            sudo apt-get update
+            sudo apt-get install -y mysql-client
+
       - name: Identify the environment
         run: |
             # Default
