ci: fix branch detection by switching from head_ref to base_ref in workflows

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -52,7 +52,7 @@ jobs:
           # Default
           ENVIRONMENT="dev"
 
-          if [[ "${GITHUB_HEAD_REF}" == "release" || "${GITHUB_REF}" == "refs/heads/release" ]]; then
+          if [[ "${GITHUB_BASE_REF}" == "release" || "${GITHUB_REF}" == "refs/heads/release" ]]; then
             ENVIRONMENT="prod"
           fi
           echo "ENVIRONMENT=$ENVIRONMENT" >> $GITHUB_ENV
